--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,337 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: agrandir;
+  src: url("./assets/fonts/Agrandir-GrandHeavy.otf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: agrandirLight;
+  src: url("./assets/fonts/Agrandir-GrandLight.otf");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: archia;
+  src: url("./assets/fonts/archia-regular-webfont.ttf");
 }
 
-.App-header {
-  background-color: #282c34;
+:root {
+  --purple-color: #bc7ab3;
+  --yellow-color: #f9c553;
+  --pink-color: #d87c7e;
+  --green-color: #4dbfa8;
+  --light-color: #f1f2f2;
+  --dark-color: #514e5b;
+}
+
+.main {
+  width: 100vw;
+  background: var(--light-color);
+  font-family: agrandir;
   min-height: 100vh;
+}
+
+body::-webkit-scrollbar {
+  display: none !important;
+}
+
+.container-landing {
+  width: 100vw;
+  height: 100vh;
+  background: url(./assets/img/landingVideo.gif) no-repeat center center fixed;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-arrow {
+  align-self: flex-end;
 }
 
-@keyframes App-logo-spin {
+.container-arrow:hover .arrow {
+  animation-play-state: paused;
+  border-color: var(--light-color);
+  /* transform: scaleX(3.5); */
+  /* border-width: 0 4px 4px 0; */
+}
+
+.arrow {
+  border: solid var(--dark-color);
+  height: 30px;
+  width: 30px;
+  border-width: 0 3px 3px 0;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 3px;
+  margin-bottom: 3rem;
+  transition: all 0.5s ease-in-out;
+
+  /*animation*/
+  -webkit-animation: slide-in-blurred-top 5s cubic-bezier(0.23, 1, 0.32, 1)
+    infinite both;
+  animation: slide-in-blurred-top 2s cubic-bezier(0.23, 1, 0.32, 1) infinite
+    both;
+}
+
+@keyframes slide-in-blurred-top {
+  0% {
+    -webkit-transform: translateY(-100px) scaleY(2.5) scaleX(0.2) rotate(45deg);
+    transform: translateY(-100px) scaleY(2.5) scaleX(0.2) rotate(45deg);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0;
+  }
+  33% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1) rotate(45deg);
+    transform: translateY(0) scaleY(1) scaleX(1) rotate(45deg);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+  66% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1) rotate(45deg);
+    transform: translateY(0) scaleY(1) scaleX(1) rotate(45deg);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(100px) scaleY(2) scaleX(0.2) rotate(45deg);
+    transform: translateY(100px) scaleY(2.5) scaleX(0.2) rotate(45deg);
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0;
+  }
+}
+
+.container-static {
+  height: 100vh;
+}
+
+.logo-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 10%;
+  font-size: 2rem;
+}
+
+.container-content {
+  display: grid;
+  grid-template-columns: 98% 2%;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.right-navigation {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dot {
+  background-color: var(--light-color);
+  border: 2px solid var(--purple-color);
+  border-radius: 50px;
+  height: 10px;
+  width: 10px;
+  margin: 3px;
+  padding: 0;
+}
+
+.dot:hover {
+  background: var(--purple-color);
+}
+
+.dot:active {
+  background: var(--purple-color);
+  /* -webkit-animation: bounce-top 0.9s both;
+  animation: bounce-top 0.9s both; */
+}
+
+@keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+    transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+    transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+    transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+}
+
+.dot-selected {
+  background-color: var(--purple-color);
+  border-radius: 50px;
+  height: 10px;
+  width: 10px;
+  margin: 3px;
+  padding: 0;
+}
+
+.container-components {
+  overflow-y: scroll;
+  scroll-behavior: smooth !important;
+}
+
+.container-components::-webkit-scrollbar {
+  display: none !important;
+}
+
+.container-about {
+  height: 90vh;
+  display: flex;
+  flex-direction: row;
+  /* background: var(--dark-color); */
+  align-items: center;
+}
+
+.title {
+  transform: rotate(-90deg);
+}
+
+.title p {
+  -webkit-text-stroke: 1px var(--dark-color);
+  color: rgba(0, 0, 0, 0);
+}
+
+.about-content {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 100%;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+.block-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 5rem;
+  position: absolute;
+}
+
+.block-text p {
+  padding: 0;
+  margin: 0;
+  color: var(--dark-color);
+  opacity: 0.8;
+}
+
+.about-img img {
+  width: 80%;
+  height: auto;
+  margin: 5rem 2rem;
+}
+
+.about-text {
+  font-family: archia;
+  margin-top: 4.5rem;
+}
+
+.container-boxes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 2rem 5rem 0 0;
+}
+
+.moving-box {
+  border: 4px solid var(--dark-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: max-content;
+  padding: 5px;
+  border-radius: 2px;
+  margin: 10px;
+  animation-name: box;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  font-family: agrandir;
+  color: var(--dark-color);
+  font-size: 0.8rem;
+  /* text-transform: uppercase; */
+}
+
+@keyframes box {
   from {
-    transform: rotate(0deg);
+    transform: translate(0, 0px);
+  }
+  65% {
+    transform: translate(0, 15px);
   }
   to {
-    transform: rotate(360deg);
+    transform: translate(0, -0px);
   }
+}
+
+.container-projects {
+  height: 100vh;
+  width: 100%;
+  background: var(--purple-color);
+}
+
+/* --------------------------------------------- */
+#test-scroll {
+  height: 100vh;
+  width: 100%;
+  background: var(--yellow-color);
 }
