--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,7 @@ body::-webkit-scrollbar {
   display: none !important;
 }
 
-.container-about {
+.container {
   height: 90vh;
   display: flex;
   flex-direction: row;
@@ -327,6 +327,40 @@ body::-webkit-scrollbar {
   height: 100vh;
   width: 100%;
   background: var(--purple-color);
+}
+
+.projects-img {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.container-project{
+  display:inline-block;
+}
+
+.projects-img a img {
+  height: 400px;
+  margin: 0 150px;
+  width: auto;
+  transition: all 1s ease-in-out;
+}
+
+.projects-img a:hover img {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.project-description {
+  border: 2px solid var(--purple-color);
+  width: 40rem;
+  height
+  position: absolute;
 }
 
 /* --------------------------------------------- */
