--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,11 @@
   background: var(--light-color);
   font-family: agrandir;
   min-height: 100vh;
+  scroll-behavior: smooth !important;
 }
 
 body::-webkit-scrollbar {
-  display: none !important;
+  display: none;
 }
 
 .container-landing {
@@ -41,6 +42,7 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   justify-content: center;
+  scroll-behavior: smooth !important;
 }
 
 .container-arrow {
@@ -120,7 +122,7 @@ body::-webkit-scrollbar {
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 10%;
+  height: 10vh;
   font-size: 2rem;
 }
 
@@ -228,7 +230,7 @@ body::-webkit-scrollbar {
 }
 
 .container-components::-webkit-scrollbar {
-  display: none !important;
+  display: none;
 }
 
 .container {
@@ -239,13 +241,58 @@ body::-webkit-scrollbar {
   align-items: center;
 }
 
-.title {
-  transform: rotate(-90deg);
+.container-title {
+  height: 100%;
+  width: 3rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
-.title p {
+.title {
+  transform: rotate(-90deg);
   -webkit-text-stroke: 1px var(--dark-color);
   color: rgba(0, 0, 0, 0);
+  text-transform: uppercase;
+}
+
+.title:hover {
+  animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+@keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1) rotate(-90deg);
+    transform: scale(1) rotate(-90deg);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91) rotate(-90deg);
+    transform: scale(0.91) rotate(-90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98) rotate(-90deg);
+    transform: scale(0.98) rotate(-90deg);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87) rotate(-90deg);
+    transform: scale(0.87) rotate(-90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1) rotate(-90deg);
+    transform: scale(1) rotate(-90deg);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
 }
 
 .about-content {
@@ -271,6 +318,39 @@ body::-webkit-scrollbar {
   margin: 0;
   color: var(--dark-color);
   opacity: 0.8;
+  transition: all 0.5s ease-in-out;
+}
+
+.block-text p:hover {
+  /* transform: translateX(2); */
+  animation: vibrate-1 0.3s linear infinite both;
+}
+
+@keyframes vibrate-1 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
 }
 
 .about-img img {
@@ -308,7 +388,16 @@ body::-webkit-scrollbar {
   font-family: agrandir;
   color: var(--dark-color);
   font-size: 0.8rem;
+  text-decoration: none;
   /* text-transform: uppercase; */
+  transition: all 0.2s ease-in-out;
+}
+
+.moving-box:hover {
+  background: var(--purple-color);
+  color: var(--light-color);
+  cursor: pointer;
+  border: 4px solid var(--purple-color);
 }
 
 @keyframes box {
@@ -323,6 +412,8 @@ body::-webkit-scrollbar {
   }
 }
 
+/* WEB PROJECTS ---------------------------------------------------------------------------------------------------------------------------*/
+
 .container-projects {
   height: 100vh;
   width: 100%;
@@ -330,18 +421,20 @@ body::-webkit-scrollbar {
 }
 
 .projects-img {
-  height: 100%;
+  height: 90%;
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 
-.container-project{
-  display:inline-block;
+.container-project {
+  display: inline-block;
+  position: relative;
 }
 
 .projects-img a img {
@@ -358,9 +451,132 @@ body::-webkit-scrollbar {
 
 .project-description {
   border: 2px solid var(--purple-color);
-  width: 40rem;
-  height
   position: absolute;
+  background: var(--purple-color);
+  color: var(--light-color);
+  padding: 1rem;
+  font-size: 1rem;
+  transition: all 0.5s ease-in-out;
+}
+
+.project-description:hover {
+  background-color: var(--dark-color);
+  cursor: pointer;
+}
+
+.project-description p {
+  font-size: 0.8rem;
+  font-family: archia;
+  padding: 0 !important;
+  margin: 0;
+}
+
+.monstera {
+  width: 15rem;
+  height: 5rem;
+  top: 15rem;
+  left: 35rem;
+}
+
+.beeogarden {
+  width: 10rem;
+  height: 6rem;
+  top: 15rem;
+  left: 17rem;
+}
+
+.bits {
+  width: 10rem;
+  height: 6rem;
+  top: 5rem;
+  left: 40rem;
+}
+
+.mpc {
+  width: 8rem;
+  height: 5rem;
+  top: 10rem;
+  left: 18rem;
+}
+
+.helder {
+  width: 10rem;
+  height: 5rem;
+  top: 10rem;
+  left: 40rem;
+}
+
+.projects-img::-webkit-scrollbar-track {
+  border: 1px solid var(--purple-color);
+  background-color: var(--light-color);
+}
+
+.projects-img::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--light-color);
+}
+
+.projects-img::-webkit-scrollbar-thumb {
+  background-color: var(--purple-color);
+  transition: all 0.5s ease-in-out;
+}
+
+.projects-img::-webkit-scrollbar-thumb:hover {
+  background-color: var(--dark-color);
+}
+
+/* ANIMATION PROJECTS------------------------------------------------------------------------------------------------------------- */
+
+.container-animations {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  grid-gap: 0.5rem;
+  margin: 0 2rem 0 0;
+  height: 85vh;
+}
+
+.animation-block {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.animation-block img {
+  width: 100%;
+  height: 100%;
+}
+
+.static {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.static:hover {
+  opacity: 0;
+}
+
+/* PHOTOGRAPHY----------------------------------------------------------------------------------------- */
+.container-100 {
+  height: 90vh;
+}
+
+.container-photography {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.container-photography img {
+  height: 80vh;
+  width: auto;
+  margin: 0 5rem;
 }
 
 /* --------------------------------------------- */
