--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   --dark-color: #514e5b;
 }
 
+* {
+  cursor: url(./assets/img/cursor/circle.png) 2 2, auto;
+}
+
 .main {
   width: 100vw;
   background: var(--light-color);
@@ -119,11 +123,16 @@ body::-webkit-scrollbar {
 
 .logo-top {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   height: 10vh;
-  font-size: 2rem;
+}
+
+.logo-top img {
+  height: 45%;
+  width: auto;
 }
 
 .container-content {
@@ -153,13 +162,52 @@ body::-webkit-scrollbar {
 }
 
 .dot:hover {
-  background: var(--purple-color);
+  background: var(--dark-color);
+  cursor: pointer;
 }
 
 .dot:active {
   background: var(--purple-color);
   /* -webkit-animation: bounce-top 0.9s both;
   animation: bounce-top 0.9s both; */
+}
+
+.color-changers {
+  display: flex;
+  justify-content: space-around;
+  width: 14%;
+}
+
+.purple {
+  border: 2px solid var(--purple-color);
+}
+.pink {
+  border: 2px solid var(--pink-color);
+}
+.yellow {
+  border: 2px solid var(--yellow-color);
+}
+.green {
+  border: 2px solid var(--green-color);
+}
+.grey {
+  border: 2px solid var(--dark-color);
+}
+
+.purple:hover {
+  background: var(--purple-color);
+}
+.pink:hover {
+  background: var(--pink-color);
+}
+.yellow:hover {
+  background: var(--yellow-color);
+}
+.green:hover {
+  background: var(--green-color);
+}
+.grey:hover {
+  background: var(--dark-color);
 }
 
 @keyframes bounce-top {
@@ -302,6 +350,9 @@ body::-webkit-scrollbar {
   height: 100%;
   width: 100%;
   margin: 2rem 0;
+  perspective: 1000px;
+  perspective-origin: center top;
+  transform-style: preserve-3d;
 }
 
 .block-text {
@@ -311,6 +362,7 @@ body::-webkit-scrollbar {
   justify-content: space-between;
   height: 5rem;
   position: absolute;
+  text-transform: uppercase;
 }
 
 .block-text p {
@@ -366,7 +418,7 @@ body::-webkit-scrollbar {
 
 .container-boxes {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   margin: 2rem 5rem 0 0;
 }
@@ -377,8 +429,8 @@ body::-webkit-scrollbar {
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: max-content;
-  padding: 5px;
+  width: 13rem;
+  padding: 10px;
   border-radius: 2px;
   margin: 10px;
   animation-name: box;
@@ -387,13 +439,13 @@ body::-webkit-scrollbar {
   animation-timing-function: ease-in-out;
   font-family: agrandir;
   color: var(--dark-color);
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-decoration: none;
   /* text-transform: uppercase; */
   transition: all 0.2s ease-in-out;
 }
 
-.moving-box:hover {
+/* .moving-box:hover {
   background: var(--purple-color);
   color: var(--light-color);
   cursor: pointer;
@@ -410,6 +462,30 @@ body::-webkit-scrollbar {
   to {
     transform: translate(0, -0px);
   }
+} */
+
+.item {
+  text-decoration: none;
+  color: var(--dark-color);
+  text-transform: uppercase;
+  margin: 1rem 0;
+  font-size: 1.2rem;
+}
+
+.underline--magical {
+  background-image: linear-gradient(
+    120deg,
+    var(--purple-color) 0%,
+    var(--purple-color) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in;
+}
+.underline--magical:hover {
+  background-size: 100% 88%;
+  cursor: pointer;
 }
 
 /* WEB PROJECTS ---------------------------------------------------------------------------------------------------------------------------*/
@@ -450,7 +526,7 @@ body::-webkit-scrollbar {
 }
 
 .project-description {
-  border: 2px solid var(--purple-color);
+  /* border: 2px solid var(--purple-color); */
   position: absolute;
   background: var(--purple-color);
   color: var(--light-color);
@@ -507,7 +583,7 @@ body::-webkit-scrollbar {
 }
 
 .projects-img::-webkit-scrollbar-track {
-  border: 1px solid var(--purple-color);
+  border: 1px solid var(--dark-color);
   background-color: var(--light-color);
 }
 
@@ -517,7 +593,7 @@ body::-webkit-scrollbar {
 }
 
 .projects-img::-webkit-scrollbar-thumb {
-  background-color: var(--purple-color);
+  background-color: var(--dark-color);
   transition: all 0.5s ease-in-out;
 }
 
@@ -579,9 +655,127 @@ body::-webkit-scrollbar {
   margin: 0 5rem;
 }
 
-/* --------------------------------------------- */
-#test-scroll {
-  height: 100vh;
+/* CONTACTS ------------------------------------------------------------------------------------- */
+
+.container-contacts {
+  height: 100%;
   width: 100%;
-  background: var(--yellow-color);
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.container-contacts img {
+  height: 100%;
+  width: auto;
+  transition: all 1s ease-in-out;
+  align-self: center;
+  animation: rotate-center 40s linear infinite both;
+  /* filter: brightness(0.4) hue-rotate(90deg) saturate(30%); */
+}
+
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.form-container {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+}
+
+.form-element {
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  position: relative;
+}
+
+.form-element input {
+  margin-top: 0.2rem;
+  background: var(--light-color);
+  border: none;
+  border-bottom: 5px solid var(--dark-color);
+  padding: 0.7rem 0.3rem;
+  transition: all 0.2s ease-in-out;
+  font-family: archia;
+}
+
+.form-element input:focus {
+  outline: none;
+  border-bottom: 5px solid var(--purple-color);
+}
+
+.form-element label {
+  color: var(--dark-color);
+}
+
+.form-container button {
+  background: var(--light-color);
+  color: var(--dark-color);
+  padding: 0.8rem 5rem;
+  border: 3px solid var(--dark-color);
+  border-radius: 2px;
+  /* font-size:1.5rem; */
+  font-family: agrandir;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+.form-container button:hover {
+  background: var(--purple-color);
+  color: var(--light-color);
+  border: 3px solid var(--purple-color);
+  cursor: pointer;
+}
+
+.input ~ .border {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0px;
+}
+
+.input:focus ~ .border {
+  width: 100%;
+  transition: 0.5s;
+}
+
+.border {
+  border: 0px solid var(--purple-color) !important;
+}
+
+.talk {
+  top: 0;
+  left: 5rem;
+  font-size: 1.5rem;
+}
+
+.contact-links {
+  align-self: flex-end;
+  margin-right: -10rem;
 }
