--- a/src/App.css
+++ b/src/App.css
@@ -739,16 +739,15 @@ body::-webkit-scrollbar {
   padding: 0.8rem 5rem;
   border: 3px solid var(--dark-color);
   border-radius: 2px;
-  /* font-size:1.5rem; */
   font-family: agrandir;
   text-transform: uppercase;
   transition: all 0.2s ease-in-out;
 }
 
 .form-container button:hover {
-  background: var(--purple-color);
+  background: var(--dark-color);
   color: var(--light-color);
-  border: 3px solid var(--purple-color);
+  border: 3px solid var(--dark-color);
   cursor: pointer;
 }
 
